[project]
name = "tree-sitter-printer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
]

[project.scripts]
tree-sitter-printer = "print:main"

[project.gui-scripts]
tree-sitter-printer = "print:main"
