[project]
name = "tree-sitter-printer"
version = "0.1.1"
description = "Pretty print tree-sitter trees to the terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
]

[project.scripts]
tree-sitter-printer = "print:main"

[project.gui-scripts]
tree-sitter-printer = "print:main"
